

[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve='0.11.12'
ff = { version = "0.11", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
secp256k1 = { version = "0.20.3", features = ["rand"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny-keccak = { version = "1.4" }
wallet={ path = "../wallet" }
bs58='0.4.0'
hex='0.3.1'
bitcoin_hashes = "0.10.0"